--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Interface\IQueryInfo.cs" />
     <Compile Include="LookupInfo.cs" />
     <Compile Include="Pagination_Info.cs" />
+    <Compile Include="Payable\PayableInfo.cs" />
     <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryInfo.cs" />
