--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Controllers\PostLogin\Master\EmployeeController.cs" />
     <Compile Include="Controllers\PostLogin\Master\GiftVoucherController.cs" />
     <Compile Include="Controllers\PostLogin\Master\ProductController.cs" />
+    <Compile Include="Controllers\PostLogin\Master\PurchaseInvoiceController.cs" />
+    <Compile Include="Controllers\PostLogin\Master\PurchaseOrderController.cs" />
+    <Compile Include="Controllers\PostLogin\Master\PurchaseReturnController.cs" />
     <Compile Include="Controllers\PostLogin\Master\RoleController.cs" />
     <Compile Include="Controllers\PostLogin\Master\SizeController.cs" />
     <Compile Include="Controllers\PostLogin\Master\TagController.cs" />
@@ -217,6 +220,8 @@
     <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\LookupViewModel.cs" />
     <Compile Include="Models\GiftVoucherViewModel.cs" />
+    <Compile Include="Models\PurchaseInvoiceViewModel.cs" />
+    <Compile Include="Models\PurchaseOrderViewModel.cs" />
     <Compile Include="Models\RoleViewModel.cs" />
     <Compile Include="Models\SizeGroupViewModel.cs" />
     <Compile Include="Models\CustomerViewModel.cs" />
@@ -1008,6 +1013,21 @@
     <Content Include="Scripts\Modules\Product\product_validation.js" />
     <Content Include="Scripts\Modules\Product\search_product_event.js" />
     <Content Include="Scripts\Modules\Product\search_product_method.js" />
+    <Content Include="Scripts\Modules\PurchaseInvoice\purchaseinvoice_events.js" />
+    <Content Include="Scripts\Modules\PurchaseInvoice\purchaseinvoice_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseInvoice\purchaseinvoice_validation.js" />
+    <Content Include="Scripts\Modules\PurchaseInvoice\search_purchaseinvoice_events.js" />
+    <Content Include="Scripts\Modules\PurchaseInvoice\search_purchaseinvoice_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_events.js" />
+    <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_validation.js" />
+    <Content Include="Scripts\Modules\PurchaseOrder\search_purchaseorder_events.js" />
+    <Content Include="Scripts\Modules\PurchaseOrder\search_purchaseorder_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_events.js" />
+    <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_validation.js" />
+    <Content Include="Scripts\Modules\PurchaseReturn\search_purchasereturn_events.js" />
+    <Content Include="Scripts\Modules\PurchaseReturn\search_purchasereturn_methods.js" />
     <Content Include="Scripts\Modules\Role\role-event.js" />
     <Content Include="Scripts\Modules\Role\role-method.js" />
     <Content Include="Scripts\Modules\Size\size_group_events.js" />
@@ -1082,6 +1102,13 @@
     <Content Include="Views\PostLogin\Master\Alteration\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Vendor\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Vendor\Search.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseOrder\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseOrder\Search.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseOrder\Print.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseInvoice\Search.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseInvoice\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseReturn\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseReturn\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
