--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -201,6 +201,8 @@
     <Compile Include="Controllers\PostLogin\Master\TaxController.cs" />
     <Compile Include="Controllers\PostLogin\Master\VendorContactController.cs" />
     <Compile Include="Controllers\PostLogin\Master\VendorController.cs" />
+    <Compile Include="Controllers\PostLogin\SalesOrderController.cs" />
+    <Compile Include="Controllers\PostLogin\SalesReturnController.cs" />
     <Compile Include="Controllers\PreLogin\HomeController.cs" />
     <Compile Include="Controllers\PreLogin\LoginController.cs" />
     <Compile Include="Global.asax.cs">
@@ -217,6 +219,8 @@
     <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\LookupViewModel.cs" />
     <Compile Include="Models\GiftVoucherViewModel.cs" />
+    <Compile Include="Models\SalesInvoiceViewModel.cs" />
+    <Compile Include="Models\SalesReturnViewModel.cs" />
     <Compile Include="Models\SizeGroupViewModel.cs" />
     <Compile Include="Models\CustomerViewModel.cs" />
     <Compile Include="Models\SubCategoryViewModel.cs" />
@@ -1004,6 +1008,16 @@
     <Content Include="Scripts\Modules\Product\product_validation.js" />
     <Content Include="Scripts\Modules\Product\search_product_event.js" />
     <Content Include="Scripts\Modules\Product\search_product_method.js" />
+    <Content Include="Scripts\Modules\SalesOrder\salesorder_events.js" />
+    <Content Include="Scripts\Modules\SalesOrder\salesorder_methods.js" />
+    <Content Include="Scripts\Modules\SalesOrder\salesorder_search_events.js" />
+    <Content Include="Scripts\Modules\SalesOrder\salesorder_search_methods.js" />
+    <Content Include="Scripts\Modules\SalesOrder\salesorder_validation.js" />
+    <Content Include="Scripts\Modules\SalesReturn\salesreturn_events.js" />
+    <Content Include="Scripts\Modules\SalesReturn\salesreturn_methods.js" />
+    <Content Include="Scripts\Modules\SalesReturn\salesreturn_search_methods.js" />
+    <Content Include="Scripts\Modules\SalesReturn\salesreturn_search_events.js" />
+    <Content Include="Scripts\Modules\SalesReturn\salesReturn_validation.js" />
     <Content Include="Scripts\Modules\Tax\tax_events.js" />
     <Content Include="Scripts\Modules\Tax\tax_methods.js" />
     <Content Include="Scripts\Modules\Tax\Tax_validation.js" />
@@ -1081,6 +1095,10 @@
     <Content Include="Views\PostLogin\Master\Alteration\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Vendor\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Vendor\Search.cshtml" />
+    <Content Include="Views\PostLogin\SalesOrder\Index.cshtml" />
+    <Content Include="Views\PostLogin\SalesOrder\Search.cshtml" />
+    <Content Include="Views\PostLogin\SalesReturn\Index.cshtml" />
+    <Content Include="Views\PostLogin\SalesReturn\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
