--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryInfo.cs" />
     <Compile Include="SalesInvoice\SalesInvoiceInfo.cs" />
+    <Compile Include="SalesReturn\SalesReturnInfo.cs" />
     <Compile Include="State\StateInfo.cs" />
     <Compile Include="Tax\TaxInfo.cs" />
     <Compile Include="VendorContact\VendorContactInfo.cs" />
