--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\PostLogin\Master\CustomerController.cs" />
     <Compile Include="Controllers\PostLogin\Master\EmployeeController.cs" />
     <Compile Include="Controllers\PostLogin\Master\GiftVoucherController.cs" />
+    <Compile Include="Controllers\PostLogin\Master\PayableController.cs" />
     <Compile Include="Controllers\PostLogin\Master\ProductController.cs" />
     <Compile Include="Controllers\PostLogin\Master\PurchaseInvoiceController.cs" />
     <Compile Include="Controllers\PostLogin\Master\PurchaseOrderController.cs" />
@@ -217,12 +218,14 @@
     <Compile Include="Models\ColorViewModel.cs" />
     <Compile Include="Models\Common\CommonViewModel.cs" />
     <Compile Include="Models\EmployeeViewModel.cs" />
+    <Compile Include="Models\PayableViewModel.cs" />
     <Compile Include="Models\PreLogin\LoginViewModel.cs" />
     <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\LookupViewModel.cs" />
     <Compile Include="Models\GiftVoucherViewModel.cs" />
     <Compile Include="Models\PurchaseInvoiceViewModel.cs" />
     <Compile Include="Models\PurchaseOrderViewModel.cs" />
+    <Compile Include="Models\PurchaseReturnViewModel.cs" />
     <Compile Include="Models\RoleViewModel.cs" />
     <Compile Include="Models\SizeGroupViewModel.cs" />
     <Compile Include="Models\CustomerViewModel.cs" />
@@ -1010,6 +1013,9 @@
     <Content Include="Scripts\Modules\GiftVoucher\search_giftvoucher_events.js" />
     <Content Include="Scripts\Modules\GiftVoucher\search_giftvoucher_method.js" />
     <Content Include="Scripts\Modules\Login\login-event.js" />
+    <Content Include="Scripts\Modules\Payable\Payable_events.js" />
+    <Content Include="Scripts\Modules\Payable\Payable_method.js" />
+    <Content Include="Scripts\Modules\Payable\Pay_event.js" />
     <Content Include="Scripts\Modules\PrintThis.js" />
     <Content Include="Scripts\Modules\Product\product_events.js" />
     <Content Include="Scripts\Modules\Product\product_methods.js" />
@@ -1119,6 +1125,8 @@
     <Content Include="Views\PostLogin\Master\PurchaseInvoice\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\PurchaseReturn\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\PurchaseReturn\Search.cshtml" />
+    <Content Include="Views\PostLogin\Master\Payable\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\Payable\Pay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
